<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="4dp"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                >

                <TextView
                    android:id="@+id/orderName"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical|start"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:text="@string/orderName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/orderTable"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical|start"
                    android:textAllCaps="true"
                    android:textStyle="italic"
                    android:text="@string/orderTable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/orderStatus"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical|start"
                    android:textAllCaps="true"
                    android:textStyle="italic"
                    android:text="@string/orderStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>
        
        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <info.hoang8f.widget.FButton
                android:id="@+id/btnEdit"
                android:text = "@string/edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cornerRadius="0dp"
                app:fButtonColor="@android:color/white"
                />

            <info.hoang8f.widget.FButton
                android:id="@+id/btnRemove"
                android:text = "@string/remove"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cornerRadius="0dp"
                app:fButtonColor="@android:color/white"
                />

            <info.hoang8f.widget.FButton
                android:id="@+id/btnDetails"
                android:text = "@string/details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cornerRadius="0dp"
                app:fButtonColor="@android:color/white"
                />

        </LinearLayout>

    </LinearLayout>



</androidx.cardview.widget.CardView>